--- a/Frontend/public/dettaglio_account_privato.html
+++ b/Frontend/public/dettaglio_account_privato.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="assets/css/dettaglio_account_privato.css?v=5.0">
 
     <!-- CORE JS -->
+    <script src="assets/js/theme-init.js" defer></script>
     <script src="assets/js/core.js"></script>
     <script type="module" src="assets/js/ui-core.js"></script>
 </head>
@@ -277,7 +278,7 @@
 
     <!-- Scripts -->
     <script type="module" src="assets/js/main.js"></script>
-    <script type="module" src="assets/js/modules/privato/dettaglio_account_privato.js"></script>
+
 </body>
 
 </html>
