--- a/Frontend/public/imposta_nuova_password.html
+++ b/Frontend/public/imposta_nuova_password.html
@@ -68,7 +68,7 @@
                 <!-- Form Salvataggio -->
                 <form id="new-password-form">
                     <!-- Hidden Username for Accessibility & Password Managers -->
-                    <input type="text" name="username" autocomplete="username" style="display:none" aria-hidden="true">
+                    <input type="text" name="username" autocomplete="username" class="hidden" aria-hidden="true">
 
                     <!-- Nuova Password -->
                     <div class="form-group">
@@ -115,7 +115,7 @@
 
     <!-- Scripts -->
     <script type="module" src="assets/js/main.js"></script>
-    <script type="module" src="assets/js/modules/auth/imposta_nuova_password.js"></script>
+
 </body>
 
 </html>
