--- a/Frontend/public/impostazioni.html
+++ b/Frontend/public/impostazioni.html
@@ -58,7 +58,7 @@
                         <!-- Top Row: Avatar + QR -->
                         <div class="hero-top-row">
                             <div class="hero-avatar-container">
-                                <div id="user-avatar-settings" class="hero-avatar bg-cover bg-center"></div>
+                                <div id="user-avatar-settings" class="hero-avatar"></div>
                             </div>
 
                             <div id="qrcode-preview" class="qr-preview-box">
@@ -269,7 +269,7 @@
                     </button>
                     <div id="privacy-dropdown-content" class="settings-dropdown-panel hidden">
                         <div id="privacy-short-text-placeholder"></div>
-                        <div class="mt-4 text-center">
+                        <div class="legal-docs-link-box">
                             <a href="privacy.html" class="btn-link-accent" data-t="privacy_short_details_link">📌 Per i
                                 dettagli completi: leggi l’Informativa Estesa.</a>
                         </div>
@@ -287,7 +287,7 @@
                     </button>
                     <div id="terms-dropdown-content" class="settings-dropdown-panel hidden">
                         <div id="terms-short-text-placeholder"></div>
-                        <div class="mt-4 text-center">
+                        <div class="legal-docs-link-box">
                             <a href="termini.html" class="btn-link-accent" data-t="terms_short_details_link">📌 Leggi i
                                 Termini e Condizioni completi.</a>
                         </div>
@@ -320,7 +320,7 @@
 
     <!-- Scripts -->
     <script type="module" src="assets/js/main.js"></script>
-    <script type="module" src="assets/js/modules/settings/impostazioni.js"></script>
+
 </body>
 
 </html>
