--- a/Frontend/public/lista_aziende.html
+++ b/Frontend/public/lista_aziende.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="assets/css/core_ui.css?v=5.0">
     <link rel="stylesheet" href="assets/css/moduli.css?v=5.0">
     <link rel="stylesheet" href="assets/css/lista_aziende.css?v=5.0">
+    <script src="assets/js/theme-init.js" defer></script>
 </head>
 
 <body class="base-bg">
@@ -59,7 +60,7 @@
 
     <!-- Scripts -->
     <script type="module" src="assets/js/main.js"></script>
-    <script type="module" src="assets/js/modules/azienda/lista_aziende.js"></script>
+
 </body>
 
 </html>
