--- a/Frontend/public/modifica_azienda.html
+++ b/Frontend/public/modifica_azienda.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="assets/css/modifica_azienda.css?v=5.0">
 
     <!-- CORE JS -->
+    <script src="assets/js/theme-init.js" defer></script>
     <script src="assets/js/core.js"></script>
     <script type="module" src="assets/js/ui-core.js"></script>
 </head>
@@ -525,7 +526,7 @@
     </div>
     </main>
     <script type="module" src="assets/js/main.js"></script>
-    <script type="module" src="assets/js/modules/azienda/modifica_azienda.js"></script>
+
 </body>
 
 </html>
