--- a/Frontend/public/reset_password.html
+++ b/Frontend/public/reset_password.html
@@ -86,8 +86,8 @@
 
                 <!-- Back Link -->
                 <div class="auth-footer-links">
-                    <a href="index.html" class="link-register flex-row items-center gap-2" data-t="back_to_login_link">
-                        <span class="material-symbols-outlined text-base">arrow_back</span>
+                    <a href="index.html" class="link-register flex-icon" data-t="back_to_login_link">
+                        <span class="material-symbols-outlined">arrow_back</span>
                         Torna all'accesso
                     </a>
                 </div>
@@ -103,7 +103,7 @@
 
     <!-- Scripts -->
     <script type="module" src="assets/js/main.js"></script>
-    <script type="module" src="assets/js/modules/auth/reset_password.js"></script>
+
 
 </body>
 
