--- a/Frontend/public/form_account_privato.html
+++ b/Frontend/public/form_account_privato.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="assets/css/form_account_privato.css?v=5.0">
 
     <!-- CORE JS -->
+    <script src="assets/js/theme-init.js" defer></script>
     <script src="assets/js/core.js"></script>
     <script type="module" src="assets/js/ui-core.js"></script>
 </head>
@@ -292,7 +293,7 @@
     </div>
 
     <script type="module" src="assets/js/main.js"></script>
-    <script type="module" src="assets/js/modules/privato/form_account_privato.js"></script>
+
 </body>
 
 </html>
