Fix Scadenze: Invalid Date, V5 Spacing, Glassmorphism Blue Cards (Light/Dark)

--- a/Frontend/public/scadenze.html
+++ b/Frontend/public/scadenze.html
@@ -68,7 +68,7 @@
                 </div>
 
                 <!-- Search Bar (SOTTO la toolbar) -->
-                <div id="search-bar-container" class="search-bar-animated">
+                <div id="search-bar-container" class="search-bar-container search-bar-animated">
                     <div class="search-input-wrapper">
                         <span class="material-symbols-outlined">search</span>
                         <input id="deadline-search" type="text" data-t-placeholder="search_deadlines_placeholder"
