--- a/Frontend/public/lista_aziende.html
+++ b/Frontend/public/lista_aziende.html
@@ -25,10 +25,11 @@
     <link rel="stylesheet" href="assets/css/moduli.css?v=5.0">
     <link rel="stylesheet" href="assets/css/lista_aziende.css?v=5.0">
     <script src="assets/js/theme-init.js" defer></script>
+    <script src="assets/js/core.js"></script>
 </head>
 
 <body class="base-bg">
-    <script src="assets/js/core.js"></script>
+    <!-- Script moved to HEAD -->
     <script type="module" src="assets/js/ui-core.js"></script>
     <div class="base-container relative">
         <!-- Ambient Glow -->
