--- a/Frontend/public/profilo_privato.html
+++ b/Frontend/public/profilo_privato.html
@@ -25,11 +25,12 @@
     <link rel="stylesheet" href="assets/css/core_ui.css?v=5.0">
     <!-- 3. Stile di Pagina -->
     <link rel="stylesheet" href="assets/css/profilo_privato.css?v=5.0">
+    <script src="assets/js/core.js"></script>
 </head>
 
 <body class="base-bg">
     <!-- CORE JS (Body-Start) -->
-    <script src="assets/js/core.js"></script>
+    <!-- CORE JS (Body-Start removed, moved to HEAD) -->
     <div class="base-container">
         <!-- Ambient Glow -->
         <div class="base-glow"></div>
