Fix login: centra .vault in accesso.css, aggiunge core.js in index.html head

--- a/Frontend/public/dati_azienda.html
+++ b/Frontend/public/dati_azienda.html
@@ -32,7 +32,6 @@
     <div class="base-container relative">
         <!-- Ambient Glow -->
         <div class="base-glow"></div>
-        <div class="base-glow pointer-events-none"></div>
 
         <!-- Automated Header -->
         <header id="header-placeholder" class="base-header"></header>
@@ -70,8 +69,7 @@
 
                     <div class="hero-title-container">
                         <h1 id="ragione-sociale" class="hero-title selectable">Caricamento...</h1>
-                        <div id="forma-giuridica"
-                            class="mx-auto mt-2 px-3 py-1 rounded-full text-[10px] font-bold uppercase tracking-widest bg-blue-500/10 text-blue-400 border border-blue-500/20 inline-block">
+                        <div id="forma-giuridica" class="company-badge">
                             Azienda
                         </div>
                     </div>
