--- a/Frontend/public/modifica_azienda.html
+++ b/Frontend/public/modifica_azienda.html
@@ -92,7 +92,7 @@
                                     </div>
                                 </div>
 
-                                <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                                <div class="form-grid-responsive">
                                     <div class="glass-field-container">
                                         <label class="view-label" for="piva">Partita IVA</label>
                                         <div class="detail-field-box border-glow">
@@ -165,7 +165,7 @@
                                 </div>
                             </div>
 
-                            <div class="grid grid-cols-2 gap-3">
+                            <div class="form-grid-2">
                                 <div class="glass-field-container">
                                     <label class="view-label" for="referente-nome">Nome</label>
                                     <div class="detail-field-box border-glow h-11">
@@ -243,7 +243,7 @@
                                 </button>
                                 <div id="section-legale"
                                     class="collapsible-section px-5 pb-5 pt-2 flex-col-gap overflow-hidden max-h-0 transition-all duration-300 ease-out">
-                                    <div class="grid grid-cols-[3fr_1fr] gap-3">
+                                    <div class="form-grid-addr">
                                         <div class="glass-field-container">
                                             <label class="view-label" for="indirizzo">Indirizzo</label>
                                             <div class="detail-field-box border-glow h-10">
@@ -259,7 +259,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="grid grid-cols-3 gap-3">
+                                    <div class="form-grid-3">
                                         <div class="glass-field-container">
                                             <label class="view-label" for="citta">Città</label>
                                             <div class="detail-field-box border-glow h-10">
@@ -283,7 +283,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="grid grid-cols-2 gap-3">
+                                    <div class="form-grid-2">
                                         <div class="glass-field-container">
                                             <label class="view-label" for="numero-cciaa">CCIAA</label>
                                             <div class="detail-field-box border-glow h-10">
@@ -312,7 +312,7 @@
                             </div>
 
                             <!-- Dynamic Sedi Container -->
-                            <div id="altre-sedi-container" class="flex flex-col gap-4">
+                            <div id="altre-sedi-container" class="altre-sedi-wrap">
                                 <!-- Dynamic Content Here -->
                             </div>
                         </div>
@@ -375,7 +375,7 @@
                                 </div>
 
                                 <!-- Grid Other Emails -->
-                                <div class="grid grid-cols-1 gap-4">
+                                <div class="flex-col-gap-3">
                                     <div class="bg-white/5 p-4 rounded-2xl border border-white/5 flex-col-gap-3">
                                         <span
                                             class="text-[9px] font-black uppercase tracking-widest text-blue-400 px-1">Amministrazione</span>
