--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -4,6 +4,7 @@
 <head>
     <!-- Anti-flicker & Theme Master (V3.9) -->
     <script src="assets/js/theme-init.js"></script>
+    <script src="assets/js/core.js"></script>
     <!-- CSP (Content Security Policy) - V3.9 Standard -->
     <meta http-equiv="Content-Security-Policy"
         content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com https://cdnjs.cloudflare.com 'sha256-vvt4KWwuNr51XfE5m+hzeNEGhiOfZzG97ccfqGsPwvE='; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
