Restyling Premium Pagina Profilo, allineamento modali a sinistra e pulizia esperimento

--- a/Frontend/public/lista_aziende.html
+++ b/Frontend/public/lista_aziende.html
@@ -24,13 +24,11 @@
     <link rel="stylesheet" href="assets/css/core_ui.css?v=5.0">
     <link rel="stylesheet" href="assets/css/moduli.css?v=5.0">
     <link rel="stylesheet" href="assets/css/lista_aziende.css?v=5.0">
-    <script src="assets/js/theme-init.js" defer></script>
-    <script src="assets/js/core.js"></script>
+    <script src="assets/js/theme-init.js"></script>
 </head>
 
 <body class="base-bg">
     <!-- Script moved to HEAD -->
-    <script type="module" src="assets/js/ui-core.js"></script>
     <div class="base-container relative">
         <!-- Ambient Glow -->
         <div class="base-glow"></div>
