--- a/Frontend/public/modifica_account_azienda.html
+++ b/Frontend/public/modifica_account_azienda.html
@@ -20,9 +20,7 @@
     <link rel="stylesheet" href="assets/css/core_ui.css?v=5.0">
     <link rel="stylesheet" href="assets/css/moduli.css?v=5.0">
     <link rel="stylesheet" href="assets/css/form_account_azienda.css?v=5.0">
-    <script src="assets/js/theme-init.js" defer></script>
-    <script src="assets/js/core.js"></script>
-    <script type="module" src="assets/js/ui-core.js"></script>
+    <script src="assets/js/theme-init.js"></script>
 </head>
 
 <body class="base-bg">
