--- a/Frontend/public/account_azienda.html
+++ b/Frontend/public/account_azienda.html
@@ -25,8 +25,7 @@
     <link rel="stylesheet" href="assets/css/account_azienda.css?v=5.0">
 
     <!-- CORE JS -->
-    <script src="assets/js/theme-init.js" defer></script>
-    <script src="assets/js/core.js"></script>
+    <script src="assets/js/theme-init.js"></script>
 </head>
 
 <body class="base-bg">
