--- a/Frontend/public/modifica_azienda.html
+++ b/Frontend/public/modifica_azienda.html
@@ -25,9 +25,7 @@
     <link rel="stylesheet" href="assets/css/modifica_azienda.css?v=5.0">
 
     <!-- CORE JS -->
-    <script src="assets/js/theme-init.js" defer></script>
-    <script src="assets/js/core.js"></script>
-    <script type="module" src="assets/js/ui-core.js"></script>
+    <script src="assets/js/theme-init.js"></script>
 </head>
 
 <body class="base-bg">
